--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style/style.css">
-  <title>Datingapp</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Datingapp</title>
+    <link rel="stylesheet" href="style/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-  <h1>Welkom</h1>
-  <a class="linkButton" href="/finding">MATCH ZOEKEN</a>
+  <h1>Inloggen</h1>
+  <form action="/login" method="post" class="login">
+
+    <fieldset>
+      <label for="emailadres">emailadres</label>
+      <input type="email" name="emailadres" placeholder="emailadres" id="emailadres">
+    </fieldset>
+
+    <fieldset>
+      <label for="pass">Wachtwoord</label>
+      <input type="password" id="pass" name="wachtwoord" required>
+    </fieldset>
+    <button type="submit" name="button">inloggen</button>
+
+  </form>
+
+  <a href="/register">registreren</a>
 </body>
+
 </html>
